--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group 'ru.netology'
@@ -9,6 +9,14 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    version = '2.20.1'
+    useJUnit5 {
+        version = '2.20.1'
+    }
+}
+
 
 repositories {
     mavenCentral()
@@ -21,6 +29,7 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+    testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
 }
 
 test {
